apps/gateway/k8s/base/namespace-and-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codai-system
  labels:
    name: codai-system
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    istio-injection: enabled
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: 'node-type=general'
